--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "build": "./node_modules/.bin/webpack && tsc",
     "web": "node dist/index.js",
     "dev": "concurrently \"tsc -w\" \"nodemon dist/index.js\" \"npm run watch-webpack\"",
-    "watch-webpack": "webpack-dev-server --env.APICMS=https://api-cms-schurwolldecke.herokuapp.com --progress --colors --hot --config ./webpack.config.js"
+    "watch-webpack": "webpack-dev-server --config ./webpack.config.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/history": "^4.7.5",
+    "@types/react-scroll": "^1.5.4",
     "autobind-decorator": "^2.4.0",
     "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.0.6",
@@ -28,6 +30,7 @@
     "express-session": "^1.16.2",
     "formidable": "^1.2.1",
     "fs": "^0.0.1-security",
+    "history": "^4.10.1",
     "html-webpack-plugin": "^3.2.0",
     "http": "^0.0.0",
     "https": "^1.0.0",
