--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/bootstrap": "^4.5.0",
     "@types/history": "^4.7.5",
+    "@types/react-bootstrap": "^1.0.1",
     "@types/react-scroll": "^1.5.4",
     "autobind-decorator": "^2.4.0",
     "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.0.6",
     "body-parser": "^1.19.0",
+    "bootstrap": "^4.5.0",
     "concurrently": "^4.1.0",
     "connect-mongo": "^3.0.0",
     "cookie-parser": "^1.4.4",
@@ -37,8 +40,9 @@
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "mongoose": "^5.6.0",
-    "node-sass": "^4.12.0",
+    "node-sass": "^4.14.1",
     "react": "^16.13.0",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
     "react-scroll": "^1.7.16",
@@ -55,7 +59,7 @@
     "webpack": "^4.35.0",
     "webpack-cli": "^3.3.5",
     "webpack-dev-middleware": "^3.7.0",
-    "webpack-dev-server": "^3.7.2",
+    "webpack-dev-server": "^3.11.0",
     "webpack-hot-middleware": "^2.25.0"
   },
   "devDependencies": {
