--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/bootstrap": "^4.5.0",
+    "@types/hammerjs": "^2.0.36",
     "@types/history": "^4.7.5",
     "@types/react-bootstrap": "^1.0.1",
     "@types/react-scroll": "^1.5.4",
@@ -33,6 +34,7 @@
     "express-session": "^1.16.2",
     "formidable": "^1.2.1",
     "fs": "^0.0.1-security",
+    "hammerjs": "^2.0.8",
     "history": "^4.10.1",
     "html-webpack-plugin": "^3.2.0",
     "http": "^0.0.0",
