--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/bootstrap": "^4.5.0",
     "@types/hammerjs": "^2.0.36",
     "@types/history": "^4.7.5",
+    "@types/jquery": "^3.5.0",
     "@types/react-bootstrap": "^1.0.1",
     "@types/react-scroll": "^1.5.4",
     "autobind-decorator": "^2.4.0",
@@ -39,6 +40,7 @@
     "html-webpack-plugin": "^3.2.0",
     "http": "^0.0.0",
     "https": "^1.0.0",
+    "jquery": "^3.5.1",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "mongoose": "^5.6.0",
