--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,23 @@
-
 {
-  "compilerOptions": {
-    "allowSyntheticDefaultImports": true,
-    "experimentalDecorators": true,
-    "jsx": "react",
-    "module": "commonjs",
-    "noImplicitAny": false,
-    "outDir": "./dist/",
-    "preserveConstEnums": true,
-    "removeComments": true,
-    "sourceMap": true,
-    "target": "es5"
-  },
-  "include": [
-    "./src/index.ts"
-  ]
+    "compilerOptions": {
+        "allowSyntheticDefaultImports": true,
+        "experimentalDecorators": true,
+        "jsx": "react",
+        "module": "commonjs",
+        "noImplicitAny": false,
+        "outDir": "./dist/",
+        "preserveConstEnums": true,
+        "removeComments": true,
+        "sourceMap": true,
+        "target": "es5"
+    },
+    "include": [
+        "./src/index.ts"
+    ],
+    "exclude": [
+        "./node_modules"
+    ],
+    "typeAcquisition": {
+        "enable": true
+    }
 }
