--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "awesome-typescript-loader": "^5.2.1",
         "babel-loader": "^8.0.6",
         "body-parser": "^1.19.0",
+        "bootstrap": "^4.5.0",
         "concurrently": "^4.1.0",
         "connect-mongo": "^3.0.0",
         "cookie-parser": "^1.4.4",
