--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "npm": ">=6.14.4"
     },
     "scripts": {
-        "start": "node dist/index.js",
+        "start": "node --max-old-space-size=512 dist/index.js",
         "build": "./node_modules/.bin/webpack && tsc",
         "web": "node dist/index.js",
         "dev": "concurrently \"tsc -w\" \"nodemon dist/index.js\" \"npm run watch-webpack\"",
