--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     },
     "scripts": {
         "start": "node dist/index.js",
-        "build": "./node_modules/.bin/webpack && tsc",
+        "build": "npx webpack && tsc",
         "web": "node dist/index.js",
         "dev": "concurrently \"tsc -w\" \"nodemon dist/index.js\" \"npm run watch-webpack\"",
         "watch-webpack": "webpack-dev-server --config ./webpack.config.js"
